# ActixWebCodeAlong

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pre-commit.yml
entity/: Cargo.toml
entity/src/: mod.rs  post.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250525_145126_create_user_table.rs
src/: error.rs  lib.rs  main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  home_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/routes/middleware/: auth_middleware.rs
src/schemas/: mod.rs  post_schemas.rs  token_schema.rs  user_schemas.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  jwt.rs
