[package]
name = "actix-youtube"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
sea-orm = { version = "1.1.11", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-cli = "1.1.11"
serde = "1.0.219"
serde_json = "1.0.140"

[lints.clippy]
all = "deny"

[profile.dev]
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
