[package]
name = "actix-youtube"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken.workspace = true
argon2 = { workspace = true }

[workspace]
resolver = "3"
members = [".", "entity", "migration"]

[workspace.dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
sea-orm = { version = "1.1.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sha256 = "1.6.0"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"


[workspace.lints.clippy]
all = "deny"

[profile.dev]
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
