[package]
name = "actix-youtube"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
jsonwebtoken.workspace = true
argon2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
actix-multipart = { workspace = true }
sanitize-filename = { workspace = true }

[workspace]
resolver = "3"
members = [".", "entity", "migration"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
publish = false
authors= ["Shubhendu Anupam Dutta <shubhenduanupam@gmail.com>"]
repository = "https://github.com/shubhenduanupamdutta/ActixWebCodeAlong"
license = "MIT"

[workspace.lints.rust]
nonstandard_style = {level = "deny", priority = -1}
future_incompatible = {level = "deny", priority = -1}
# rust_2018_idioms = {level="deny", priority = -1}
rust_2021_compatibility = {level = "deny", priority = -1}
# missing_copy_implementation = "deny"
unsafe_code = "deny"
# missing_docs = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
unreachable_pub = "deny"
non_ascii_idents = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "warn"
unused_import_braces = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
all = "deny"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = true
opt-level = 3
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false


[workspace.dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
sea-orm = { version = "1.1.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
uuid = { version = "1.17.0", features = ["v4"] }
actix-multipart = "0.7.2"
sanitize-filename = "0.6.0"


[profile.dev]
debug = true
