[package]
name = "entity"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }

[lints]
workspace = true
