[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
] }
