[package]
name = "migration"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
] }
